--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ spring.datasource.username=root
 spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
+
+logging.file.name=application.log
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
+#Logging pattren for the console and file
+logging.pattern.console=%d{yyyy-MM-dd HH-mm-ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
