--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+spring.profiles.active=dev
+
+environment=COMMON
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/payroll_service1
 spring.datasource.username=root
 spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
+
